<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical"

        tools:ignore="ObsoleteLayoutParam">

        <ImageView
            android:id="@+id/imgApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/view_margin"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pt_central_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_triple"
            android:background="@drawable/bg_white"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/tvUserName"
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/email"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/email_field"
                android:ems="30"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="40dp">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/tvPassword"
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/password_field"


                android:ems="15"
                android:hint="Password"
                android:paddingLeft="40dp"
                android:password="true" />

            <TextView
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/view_margin"
                android:text="Forgot Password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0aa" />

            <ProgressBar
                android:id="@+id/pbActivity"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:indeterminateDrawable="@drawable/progress_bg"
                android:indeterminateOnly="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/custom_btn_blue"
                android:text="@string/login"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView1"
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_user"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginLeft="@dimen/view_margin"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/custom_btn_gray"
                android:text="@string/signup"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>