<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"

        tools:ignore="ObsoleteLayoutParam">

        <ImageView
            android:id="@+id/imgApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/view_margin"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pt_central_small" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/view_margin"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginTop="@dimen/view_margin"
            android:background="@drawable/button_orange"
            android:text="@string/login"
            android:textColor="#FFFFFF" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:padding="@dimen/view_margin"

            >

            <TextView
                android:id="@+id/tvUserName"
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/email"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"

                android:layout_height="45dp"
                android:background="@drawable/email_field"

                android:ems="15"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="40dp">


            </EditText>


            <EditText
                android:id="@+id/etPassword"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/password_field"
                android:ems="15"
                android:hint="@string/password"

                android:paddingLeft="40dp" />

            <EditText
                android:id="@+id/etPasswordAgain"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/password_field"


                android:ems="15"
                android:hint="Password Again"

                android:paddingLeft="40dp" />


            <ProgressBar
                android:id="@+id/pbActivity"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:indeterminateDrawable="@drawable/progress_bg"
                android:indeterminateOnly="true"
                android:visibility="gone" />


            <Button

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"

                android:background="@drawable/button_orange"

                android:text="Personal"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/etFirstName"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/text_field"


                android:ems="15"
                android:hint="@string/first_name"
                android:inputType="textCapWords"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/etLastName"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/text_field"


                android:ems="15"
                android:hint="Last Name"
                android:inputType="textCapWords"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/etPhoneNo"

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/text_field"


                android:ems="15"
                android:hint="Phone Number"
                android:inputType="phone"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/bDateOfBirth"
                android:layout_width="match_parent"

                android:layout_height="45dp"
                android:layout_marginTop="@dimen/view_margin"
                android:background="@drawable/text_field"
                android:ems="15"
                android:gravity="left|center_vertical"
                android:hint="Date of Birth"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray" />


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/view_margin"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="@dimen/view_margin"

                    android:text="Gender"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/label_font_size"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/radGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radGenderMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:gravity="left|center_vertical"
                        android:text="Male"
                        android:textColor="@color/gray" />

                    <RadioButton
                        android:id="@+id/radGenderFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:checked="false"
                        android:text="Female"
                        android:textColor="@color/gray" />
                </RadioGroup>

            </TableRow>

            <TextView
                android:id="@+id/textView1"
                style="@style/input_field_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_user"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/view_margin"
                android:layout_marginTop="@dimen/view_margin"

                android:background="@drawable/custom_btn_blue"
                android:text="Register"

                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="@dimen/view_margin"
                android:background="@drawable/custom_btn_orange"
                android:text="Cancel"

                android:textColor="#FFFFFF"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>